# pipelines

./: Dockerfile  docker-compose.yaml  pyproject.toml
Dagster/: README.md  pyproject.toml  run_dagster.py
Perfect/: README.md  pyproject.toml  run_perfect.py
db/: database.py
example_pipeline/: pipeline.py
pipelines/: tasks.py
test/: tests.py
